Closed
Bug 1347944
Opened 6 years ago
Closed 6 years ago
Uplift three crash fixes to beta and/or aurora
Categories
(Core :: Audio/Video: cubeb, defect, P1)
Tracking
()
RESOLVED
FIXED
Tracking | Status | |
---|---|---|
firefox52 | --- | wontfix |
firefox-esr52 | --- | fixed |
firefox53 | --- | fixed |
firefox54 | --- | fixed |
firefox55 | --- | unaffected |
People
(Reporter: padenot, Assigned: padenot)
References
Details
Attachments
(2 files, 2 obsolete files)
5.82 KB,
patch
|
lizzard
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
5.51 KB,
patch
|
jcristau
:
approval-mozilla-esr52+
|
Details | Diff | Splinter Review |
Attached is a beta patch for those bugs: - Bug 1342389 - Bug 1345147 - Bug 1347453
Comment 1•6 years ago
|
||
Per IRC discussion, we may want to consider doing some backports to esr52 as well, but the situation for including them as an Fx52 dot release ride-along is more murky.
status-firefox52:
--- → fix-optional
status-firefox53:
--- → affected
status-firefox54:
--- → affected
status-firefox55:
--- → unaffected
status-firefox-esr52:
--- → affected
Assignee | ||
Comment 2•6 years ago
|
||
This is simply cherry picked from recent patches.
Attachment #8848109 -
Flags: review?(kinetik)
Assignee | ||
Updated•6 years ago
|
Assignee: nobody → padenot
Status: NEW → ASSIGNED
Updated•6 years ago
|
Attachment #8848109 -
Flags: review?(kinetik) → review+
Assignee | ||
Comment 3•6 years ago
|
||
This is the patch to land for beta. MozReview-Commit-ID: LdcXcbTFxqL
Assignee | ||
Comment 4•6 years ago
|
||
This is the patch rebased for aurora.
Assignee | ||
Comment 5•6 years ago
|
||
Comment on attachment 8848534 [details] [diff] [review] Uplift three crash fixes to beta Approval Request Comment [Feature/Bug causing the regression]: fallout from bug 1314514 where we made a crash less worrisome and reduced its volume [User impact if declined]: low volume crashes [Is this code covered by automated tests?]: no, we don't even know how this happens in the first place. One of the crash has a test upstream that we have disabled here because it takes too long, but we'll fix that soon (https://github.com/kinetiknz/cubeb/blob/master/test/test_overload_callback.cpp) [Has the fix been verified in Nightly?]: yes, it's been landed for some time now [Needs manual test from QE? If yes, steps to reproduce]: no [List of other uplifts needed for the feature/fix]: this is specifically prepared so that it can land on its own [Is the change risky?]: no [Why is the change risky/not risky?]: we've seen a drop in crashes in nightlies (but it's a bit hard to tell because it's low volume in the first place) [String changes made/needed]: none
Attachment #8848534 -
Flags: approval-mozilla-beta?
Assignee | ||
Comment 6•6 years ago
|
||
Comment on attachment 8848535 [details] [diff] [review] Uplift three crash fixes to aurora Approval Request Comment [Feature/Bug causing the regression]: fallout from bug 1314514 where we made a crash less worrisome and reduced its volume [User impact if declined]: low volume crashes [Is this code covered by automated tests?]: no, we don't even know how this happens in the first place. One of the crash has a test upstream that we have disabled here because it takes too long, but we'll fix that soon (https://github.com/kinetiknz/cubeb/blob/master/test/test_overload_callback.cpp) [Has the fix been verified in Nightly?]: yes, it's been landed for some time now [Needs manual test from QE? If yes, steps to reproduce]: no [List of other uplifts needed for the feature/fix]: this is specifically prepared so that it can land on its own [Is the change risky?]: no [Why is the change risky/not risky?]: we've seen a drop in crashes in nightlies (but it's a bit hard to tell because it's low volume in the first place) [String changes made/needed]: none
Attachment #8848535 -
Flags: approval-mozilla-aurora?
Updated•6 years ago
|
Rank: 12
Priority: -- → P1
Comment on attachment 8848534 [details] [diff] [review] Uplift three crash fixes to beta Fix for a/v crash, let's uplift to beta. It may not land until Thursday's beta 6 build.
Attachment #8848534 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Attachment #8848535 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Updated•6 years ago
|
Attachment #8848109 -
Attachment is obsolete: true
Comment 8•6 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-aurora/rev/93b358d61a9b
Assignee | ||
Comment 10•6 years ago
|
||
This is rebased on top of current beta. I must have written the patch on top of an old tree, sorry about that.
Assignee | ||
Updated•6 years ago
|
Attachment #8848534 -
Attachment is obsolete: true
Assignee | ||
Comment 11•6 years ago
|
||
Fixed, sorry about that.
Flags: needinfo?(padenot) → needinfo?(ryanvm)
Updated•6 years ago
|
Flags: needinfo?(ryanvm)
Comment 12•6 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-beta/rev/36c50c1294eb
Fixed in beta, we still may want to bring the one fix that affects esr52 into esr though.
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Comment 16•6 years ago
|
||
Other than a conflict in update.sh that'd be trivial to rebase around, this grafts cleanly to esr52. Please request approval when you're comfortable doing so.
Flags: needinfo?(padenot)
Updated•6 years ago
|
Assignee | ||
Comment 17•6 years ago
|
||
Comment on attachment 8849533 [details] [diff] [review] Uplift three crash fixes to beta [Approval Request Comment] If this is not a sec:{high,crit} bug, please state case for ESR consideration: this fixes crashes User impact if declined: it will crash a little bit more Fix Landed on Version: 53, 54, 55 Risk to taking this patch (and alternatives if risky): not really risky, we've landed that on a bunch of branches, and it does fix three different crashes (we've looked at crash-stats in the following days). String or UUID changes made by this patch: none See https://wiki.mozilla.org/Release_Management/ESR_Landing_Process for more info.
Flags: needinfo?(padenot)
Attachment #8849533 -
Flags: approval-mozilla-esr52?
Comment 18•6 years ago
|
||
Comment on attachment 8849533 [details] [diff] [review] Uplift three crash fixes to beta cubeb crash fix for 52.1.0esr
Attachment #8849533 -
Flags: approval-mozilla-esr52? → approval-mozilla-esr52+
Comment 19•6 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-esr52/rev/47cb652ddc25
You need to log in
before you can comment on or make changes to this bug.
Description
•