Bug 1347944 - Uplift three cubeb crash fixes to Fx53. r=kinetik, a=lizzard

This is simply cherry picked from recent patches.

MozReview-Commit-ID: LdcXcbTFxqL