media/libcubeb/update.sh
@@ -71,3 +71,6 @@ patch -p1 < ./audiounit-drift-fix.patch
 
 echo "Applying a patch on top of $version"
 patch -p1 < ./uplift-wasapi-fixes-aurora.patch
+
+echo "Applying a patch on top of $version"
+patch -p3 < ./fix-crashes.patch
